# cool-reader

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  wdio.conf.ts
.husky/: pre-commit
public/lib/kookit/: kookit.umd.js
src/: App.vue  components.d.ts  config.ts  index.d.ts  main.ts  naive.ts  route.ts  style.css  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  language.rs  main.rs  tray.rs
src-tauri/src/data_base/: command.rs  common.rs  highlight.rs  mod.rs  notes.rs
src/components/: book.vue  home.vue  note.vue  view.vue
src/components/book-content/: index.vue  toolbar.ts  web-highlight.ts
src/components/book-list/: book-list.ts  index.vue
src/components/catalog/: catalog.ts  catalog.vue  (+1 more)
src/constants/: index.ts
src/core/: book.ts  file-size.ts  file.ts  layout.ts  md5.ts  pdf.ts  storage.ts  type.ts  utils.ts
src/enums/: book.ts  components.ts  event.ts  i18n.ts  index.ts  router.ts
src/i18n/: index.ts
src/interfaces/: index.d.ts
src/layouts/: header.vue  index.vue  menu.vue  pc.vue
src/model/: book.ts  index.ts  notes.ts
src/server/: highlight.ts  notes.ts
src/store/: book.ts  domSource.ts  file.ts  index.ts  kookit.ts  notes.ts  page-number.ts  toolbar.ts  web-highlight.ts
src/style/: style.css  viewer.css  web-highlight.css
src/utils/: book.ts  catalog.ts  doc.ts  dom.ts  fied.ts  file.ts  index.ts  is.ts  server.ts  sort.ts  style.ts  time.ts  todo.ts  union.ts
test/: home.spec.ts
test/components/: web-highlight.test.ts
(+175 files in other folders)
