[package]
name = "cool-reader"
version = "0.0.1"
description = "A Reader App"
authors = ["buzhifanji"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.0", features = [] }

[dependencies]
serde_json = "1.0.86"
time = "0.3.16"

tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
rusqlite = { version = "0.28.0", features = ["bundled"] }


serde = { version = "1.0.146", features = ["derive"] }
tauri-driver = "0.1.2"
tauri = { version = "1.1.0", features = ["api-all", "system-tray"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
